--- a/.drone.yml
+++ b/.drone.yml
@@ -14,7 +14,7 @@ steps:
       - name: maven_local_repo
         path: /root/.m2
     commands:
-      - mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true
+      - mvn clean -DskipTests=true -Dmaven.javadoc.skip=true
   - name: deploy
     image: appleboy/drone-ssh
     settings:
