--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 kind: pipeline
 type: docker
-name: ci-cd-demo
+name: default
 
 volumes:
   - name: maven_local_repo
@@ -14,7 +14,7 @@ steps:
       - name: maven_local_repo
         path: /root/.m2
     commands:
-      - mvn clean -DskipTests=true -Dmaven.javadoc.skip=true
+      - mvn clean -DskipTests=true -Dmaven.javadoc.skip=true dockerfile:build
   - name: docker
     image: plugins/docker
     settings:
