--- a/.drone.yml
+++ b/.drone.yml
@@ -14,13 +14,13 @@ steps:
       - name: maven_local_repo
         path: /root/.m2
     commands:
-      - mvn clean -DskipTests=true -Dmaven.javadoc.skip=true dockerfile:build
+      - mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true
   - name: docker
     image: plugins/docker
     settings:
-      username: daixk1212
-      password: dxk19911212
-      repo: drone-ci
+      username: dxk19911212
+      password: dxk?19911212
+      repo: registry.cn-hangzhou.aliyuncs.com/hbhb/drone-ci
       tags: latest
   - name: deploy
     image: appleboy/drone-ssh
