--- a/.drone.yml
+++ b/.drone.yml
@@ -25,20 +25,21 @@ steps:
       tags: latest
       dockerfile: ./Dockerfile
       mirror: https://wm9kcxms.mirror.aliyuncs.com
-      dry_run: false
-      purge: false
-#  - name: deploy
-#    image: appleboy/drone-ssh
-#    settings:
-#      host: 112.13.201.108
-#      username: root
+      dry_run: true
+      purge: true
+  - name: deploy
+    image: appleboy/drone-ssh
+    settings:
+      host: 112.13.201.108
+      port: 2022
+      username: root
+      password: Qaz2@wsx
 #      key:
 #        from_secret: ssh_key
-#      port: 2022
-#      command_timeout: 3m
-#      script_stop: false
-#      script:
-#        - docker-compose ps
+      command_timeout: 3m
+      script_stop: false
+      script:
+        - docker-compose ps
   #  - name: notify
   #    image: plugins/webhook
   #    settings:
