--- a/.drone.yml
+++ b/.drone.yml
@@ -29,35 +29,33 @@ steps:
       tags: latest
       dockerfile: ./Dockerfile
       mirror: https://wm9kcxms.mirror.aliyuncs.com
-      dry_run: true
-      purge: true
   # ssh远程执行脚本
-  - name: deploy
-    image: appleboy/drone-ssh
-    settings:
-      host: 112.13.201.108
-      port: 2022
-      username: root
-      password: Qaz2@wsx
+#  - name: deploy
+#    image: appleboy/drone-ssh
+#    settings:
+#      host: 112.13.201.108
+#      port: 2022
+#      username: root
+#      password: Qaz2@wsx
 #      key:
 #        from_secret: ssh_key
-      command_timeout: 3m
-      script_stop: false
-      script:
-        - docker-compose ps
-  #  - name: notify
-  #    image: plugins/webhook
-  #    settings:
-  #      urls:
-  #        from_secret: notify_url
-  #      content_type: application/x-www-form-urlencoded
-  #      template: |
-  #        text=`部署{{ build.status }}`&desp=在{{ repo.name }}的{{build.branch}}上{{ build.event }}了{{truncate build.commit 8}}的commit, 结果 {{ build.status }} 了, 耗时{{ since build.started }}, 点这里[查询]({{ build.link }})
-  #      debug: true
-  #    when: # 无论成功失败都运行
-  #      status:
-  #        - failure
-  #        - success
+#      command_timeout: 3m
+#      script_stop: false
+#      script:
+#        - docker-compose ps
+#  - name: notify
+#    image: plugins/webhook
+#    settings:
+#      urls:
+#        from_secret: notify_url
+#      content_type: application/x-www-form-urlencoded
+#      template: |
+#        text=`部署{{ build.status }}`&desp=在{{ repo.name }}的{{build.branch}}上{{ build.event }}了{{truncate build.commit 8}}的commit, 结果 {{ build.status }} 了, 耗时{{ since build.started }}, 点这里[查询]({{ build.link }})
+#      debug: true
+#    when: # 无论成功失败都运行
+#      status:
+#        - failure
+#        - success
   # 消息推送
   - name: notify
     image: yakumioto/drone-serverchan
