--- a/src/main/resources/log4j2.yml
+++ b/src/main/resources/log4j2.yml
@@ -6,8 +6,7 @@ Configuration:
       - name: log.level
         value: debug
       - name: log.path
-        value: /Users/dxk/Documents/logs/
-#        value: /app/cloud/logs/
+        value: /app/logs/test/
       - name: project.name
         value: @project.artifactId@
       - name: log.pattern
