--- a/.drone.yml
+++ b/.drone.yml
@@ -48,7 +48,15 @@ steps:
       token:
         from_secret: dingtalk_token
       type: markdown
+      tpl:
+        [TPL_REPO_FULL_NAME] build [TPL_BUILD_STATUS], takes [TPL_BUILD_CONSUMING]s
+        [TPL_COMMIT_MSG]
+        [TPL_COMMIT_SHA]([TPL_COMMIT_LINK])
+#        [[TPL_AUTHOR_NAME]([TPL_AUTHOR_EMAIL])](mailto:[TPL_AUTHOR_EMAIL])
+        [Click To The Build Detail Page [TPL_STATUS_EMOTICON)]]([TPL_BUILD_LINK])
       message_color: true
+      success_color: 008000
+      failure_color: FF0000
       message_pic: true
       sha_link: true
     when:
@@ -58,4 +66,5 @@ volumes:
   - name: maven_local_repo
     host:
       path: /app/data/maven_local_repo
+
 
