--- a/.drone.yml
+++ b/.drone.yml
@@ -43,17 +43,12 @@ steps:
 
   # 钉钉通知
   - name: dingtalk
-    image: lddsb/drone-dingtalk-message
+    image: lddsb/drone-dingtalk-message:1.2.4
     settings:
       token:
         from_secret: dingtalk_token
       type: markdown
-      tpl:
-        [TPL_REPO_FULL_NAME] build [TPL_BUILD_STATUS], takes [TPL_BUILD_CONSUMING]s
-        [TPL_COMMIT_MSG]
-        [TPL_COMMIT_SHA]([TPL_COMMIT_LINK])
-#        [[TPL_AUTHOR_NAME]([TPL_AUTHOR_EMAIL])](mailto:[TPL_AUTHOR_EMAIL])
-        [Click To The Build Detail Page [TPL_STATUS_EMOTICON)]]([TPL_BUILD_LINK])
+      tpl: ./markdown.tpl
       message_color: true
       success_color: 008000
       failure_color: FF0000
