--- a/.drone.yml
+++ b/.drone.yml
@@ -27,19 +27,19 @@ steps:
 #      dockerfile: ./Dockerfile
 
   # ssh远程执行脚本
-#  - name: deploy
-#    image: appleboy/drone-ssh
-#    settings:
-#      host: 112.13.201.108
-#      port: 2022
-#      username: root
-#      password: Qaz2@wsx
-##      key:
-##        from_secret: ssh_key
-#      command_timeout: 3m
-#      script_stop: false
-#      script:
-#        - docker-compose ps
+  - name: deploy
+    image: appleboy/drone-ssh
+    settings:
+      host: 112.13.201.108
+      port: 2022
+      username: root
+      password: Qaz2@wsx
+#      key:
+#        from_secret: ssh_key
+      command_timeout: 3m
+      script_stop: false
+      script:
+        - docker-compose ps
 
   # 钉钉通知
   - name: dingtalk
@@ -50,7 +50,7 @@ steps:
       type: markdown
       tpl: ./markdown.tpl
       message_color: true
-      success_color: 008000
+      success_color: CC00FF
       failure_color: FF0000
       tpl_build_status_success: 成功
       tpl_build_status_failure: 失败
