--- a/.drone.yml
+++ b/.drone.yml
@@ -27,19 +27,19 @@ steps:
 #      dockerfile: ./Dockerfile
 
   # ssh远程执行脚本
-#  - name: deploy
-#    image: appleboy/drone-ssh
-#    settings:
-#      host: 112.13.201.108
-#      port: 2022
-#      username: root
-#      password: Qaz2@wsx
-##      key:
-##        from_secret: ssh_key
-#      command_timeout: 3m
-#      script_stop: false
-#      script:
-#        - docker-compose ps
+  - name: deploy
+    image: appleboy/drone-ssh
+    settings:
+      host: 112.13.201.108
+      port: 2022
+      username: root
+      password: Qaz2@wsx
+#      key:
+#        from_secret: ssh_key
+      command_timeout: 3m
+      script_stop: false
+      script:
+        - docker-compose ps
 
   # 钉钉通知
   - name: dingtalk
@@ -51,15 +51,14 @@ steps:
       tpl: ./markdown.tpl
       tips_title: 新的构建已完成，请测试
       message_color: true
-      success_color: 7fde54
-      failure_color: e15430
+      success_color: 39D839
+      failure_color: E93939
       tpl_build_status_success: 成功
       tpl_build_status_failure: 失败
       message_pic: true
       sha_link: true
     when:
       status: [failure, success]
-
 
 volumes:
   - name: maven_local_repo
