--- a/.drone.yml
+++ b/.drone.yml
@@ -1,83 +1,74 @@
-#kind: pipeline
-#type: docker
-#name: default
-#
-#steps:
-  # maven打包
-#  - name: build
-#    image: maven:3-jdk-8
-#    volumes:
-#      - name: maven_local_repo
-#        path: /root/.m2
-#    commands:
-#      - mvn clean -Ptest package -DskipTests=true -Dmaven.javadoc.skip=true
-
-  # docker镜像推送
-#  - name: docker
-#    image: plugins/docker
-#    settings:
-#      username:
-#        from_secret: docker_user
-#      password:
-#        from_secret: docker_pwd
-#      mirror: https://wm9kcxms.mirror.aliyuncs.com
-#      repo: registry.cn-hangzhou.aliyuncs.com/hbhb/drone-ci
-#      registry: registry.cn-hangzhou.aliyuncs.com
-#      tags: latest
-#      dockerfile: ./Dockerfile
-
-  # ssh远程执行脚本
-#  - name: deploy
-#    image: appleboy/drone-ssh
-#    settings:
-#      host: 112.13.201.108
-#      port: 22
-#      username: root
-##      password: Qaz2@wsx
-#      key:
-#        from_secret: ssh_key
-#      command_timeout: 3m
-#      script_stop: false
-#      script:
-#        - docker-compose ps
-
-  # 钉钉通知
-#  - name: dingtalk
-#    image: lddsb/drone-dingtalk-message
-#    settings:
-#      token:
-#        from_secret: dingtalk_token
-#      type: markdown
-#      tpl: ./markdown.tpl
-#      tips_title: 新的构建已完成，请测试
-#      message_color: true
-#      success_color: 39D839
-#      failure_color: E93939
-#      tpl_build_status_success: 成功
-#      tpl_build_status_failure: 失败
-#      message_pic: true
-#      sha_link: true
-#    when:
-#      status: [failure, success]
-
-#volumes:
-#  - name: maven_local_repo
-#    host:
-#      path: /app/data/maven_local_repo
-
-#---
 kind: pipeline
-type: ssh
+type: docker
 name: default
 
-server:
-  host: 112.13.201.108
-  user: root
-  password: Qaz2@wsx
-
 steps:
-  - name: greeting
+  # maven打包
+  - name: build
+    image: maven:3-jdk-8
+    volumes:
+      - name: maven_local_repo
+        path: /root/.m2
     commands:
-      - echo hello worldd
+      - mvn clean -Ptest package -DskipTests=true -Dmaven.javadoc.skip=true
 
+  # docker镜像推送
+  - name: docker
+    image: plugins/docker
+    settings:
+      username: dxk19911212
+      #        from_secret: docker_user
+      password: dxk?19911212
+      #        from_secret: docker_pwd
+      mirror: https://wm9kcxms.mirror.aliyuncs.com
+      repo: registry.cn-hangzhou.aliyuncs.com/hbhb/ci-cd-demo
+      registry: registry.cn-hangzhou.aliyuncs.com
+      tags: latest
+      dockerfile: ./Dockerfile
 
+  # ssh远程执行脚本
+  - name: deploy
+    image: appleboy/drone-ssh
+    settings:
+      host: 112.13.201.108
+      port: 22
+      username: root
+      password: Qaz2@wsx
+      #      key:
+      #        from_secret: ssh_key
+      command_timeout: 3m
+      script_stop: false
+      proxy_host: 120.78.150.87
+      proxy_port: 22
+      proxy_user: root
+      proxy_password: root@iishoni.2017
+      script:
+        - docker-compose stop ci-cd-demo
+        - cd ~ & ll
+        - docker-compose rm -f ci-cd-demo
+        - docker rmi registry.cn-hangzhou.aliyuncs.com/hbhb/ci-cd-demo
+        - docker-compose up -d ci-cd-demo
+
+  # 钉钉通知
+  - name: dingtalk
+    image: lddsb/drone-dingtalk-message
+    settings:
+      token:
+        from_secret: dingtalk_token
+      type: markdown
+      tpl: ./markdown.tpl
+      tips_title: 新的构建已完成，请测试
+      message_color: true
+      success_color: 39D839
+      failure_color: E93939
+      tpl_build_status_success: 成功
+      tpl_buaild_status_failure: 失败
+      message_pic: true
+      sha_link: true
+    when:
+      status: [failure, success]
+
+volumes:
+  - name: maven_local_repo
+    host:
+      path: /data/maven
